--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,10 +47,13 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: scroll;
-  font-size: x-large;
+  font-size: large;
   min-height: 100%;
   line-height: 100%;
+  /* animation: fade 1s; */
+
 }
+
 
 h2 {
   font-size: x-large;
@@ -85,14 +88,26 @@ button:active {
 
 
 header {
+  overflow: hidden;
+  display:flex;
   width: 100vw;
   height: auto;
   max-height: 10vh;
   justify-content: center; 
   background-color: white;
   font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: small;
+}
+#address {  
+  color: #666;
+  margin: 0 auto;
 }
 
+#phone{
+  color: #777;
+  text-decoration: none;
+  margin: 0 auto;
+}
 #logo {
   margin: 0 auto;
   height: 100%;
@@ -150,6 +165,9 @@ section div{
   width:100%;
 }
 
+#apptStatus {
+  color: red;
+}
 
 
 #appointments img{
@@ -164,9 +182,17 @@ section div{
   /* clip-path: polygon(50% 0%, 100% 7%, 100% 93%, 50% 100%, 0% 93%, 0% 7%); */
   box-shadow: -5px 5px 20px black;
 }
-#appointments, #directions{
+#appointments, #directions, #services{
+  margin: 1vh auto;
   position: relative;
   text-decoration: none;
+  animation: fade 2s, slide 2s;
+
+}
+
+#map {
+  width: 100%;
+  height:100%;
 }
 #appointments div{
   position: absolute;
@@ -178,6 +204,31 @@ section div{
   color: white;
   text-shadow: 1px 1px black;
   text-align: center;
+}
+
+#services div{
+  position: absolute;
+  bottom: 10%;
+  left: 0%;
+  font-size: medium;
+  width: 100%;
+  padding: 2% 0%;
+  color: white;
+  text-shadow: 1px 1px black;
+  text-align: center;
+}
+
+#services img{
+  margin: 0 10px;
+  width: auto;
+  height: auto;
+  min-width: 20vw;
+  max-width: 34vw;
+  max-height: 50vh;
+  background-color: grey;
+  border-radius: 5px;
+  /* clip-path: polygon(50% 0%, 100% 7%, 100% 93%, 50% 100%, 0% 93%, 0% 7%); */
+  box-shadow: 0px 5px 20px black;
 }
 
 #directions img{
@@ -203,6 +254,8 @@ section div{
   text-shadow: 1px 1px black;
   text-align: center;
 }
+
+
 
 #header-links {
   background-color: white;
@@ -254,12 +307,13 @@ section div{
   left: 0;
   top: 0;
   width: 100%; /* Full width */
-  height: 100%; /* Full height */
+  height: 100%;/* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   transition: opacity 600ms, visibility 600ms;
   animation: fade 1s;
+
 }
 
 @keyframes fade {
@@ -271,15 +325,28 @@ section div{
       opacity: 1;
   }
 }
+
+@keyframes slide {
+  0% {
+    margin-left: -10vw;
+  }
+  100% {
+    margin-left: 0vw;
+  }
+}
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15vh auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 50vw; /* Could be more or less, depending on screen size */  
+
 }
 
+.modal-content table {
+  margin: 0 auto;
+}
 /* The Close Button */
 .close {
   color: #aaa;
