--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,8 +84,38 @@ button:active {
   transform: scale(0.99);
   box-shadow: none;
 }
+#adminControl{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+}
 
+#adminControl .service {
+  flex: 0 0 27.333333%;
+max-width: 27.333333%;
+  position: relative;
+  height: auto;
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+}
 
+#adminControl .booking {
+  flex: 0 0 43%;
+max-width: 43%;
+  position: relative;
+  height: auto;
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+#adminControl table{
+  height:auto;
+  width: 100%;
+}
 
 header {
   overflow: hidden;
